--- a/sass/_screen.scss
+++ b/sass/_screen.scss
@@ -454,14 +454,14 @@ form {
         position:relative;
     }
     input[type=text] {
-        width: 70%;
+        width: 65%;
         float:left;
         height:20px;
         margin:0;        
     }
     
     input[type=submit] {
-        width: auto;
+        width: 25%;
         float:left;
         padding:4px;
         margin:0;
